fix: Adjust code, hts precompiles appeared before erc
Signed-off-by: Kristiyan Selveliev <kristiyan.selveliev@limechain.tech>